--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,10 @@ psycopg2-binary
 django-environ
 django-debug-toolbar
 django-jazzmin
+dj-rest-auth[with_social]
+django-allauth
+djangorestframework-simplejwt
+django-cors-headers
+
 
 flake8 >= 3.8.0, < 3.9.0
