--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ dj-rest-auth[with_social]
 django-allauth
 djangorestframework-simplejwt
 django-cors-headers
+requests_oauthlib
 
 
 flake8 >= 3.8.0, < 3.9.0
