--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -18,6 +19,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/yup": "^0.29.9",
     "axios": "^0.21.0",
+    "dotenv-cli": "^4.0.0",
     "formik": "^2.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
