--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,9 @@ django-allauth
 djangorestframework-simplejwt
 django-cors-headers
 requests_oauthlib
-ulid
+django-filter
+
+requests
+beautifulsoup4
 
 flake8 >= 3.8.0, < 3.9.0
