--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,15 @@
     "axios": "^0.21.0",
     "dotenv-cli": "^4.0.0",
     "formik": "^2.2.2",
+    "formik-material-ui": "^3.0.0",
+    "formik-material-ui-lab": "^0.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "rifm": "^0.12.0",
     "typescript": "~3.8.2",
     "yup": "^0.29.3"
   },
