--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.165",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -19,10 +22,12 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/yup": "^0.29.9",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "dotenv-cli": "^4.0.0",
     "formik": "^2.2.2",
     "formik-material-ui": "^3.0.0",
     "formik-material-ui-lab": "^0.0.7",
+    "loadash": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
