:tada: バックエンド完成
通貨、税金、部門コードなど、新たな機能を追加した。

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,6 +10,8 @@ RUN mkdir /backend
 WORKDIR /backend
 COPY . /backend
 
+RUN mkdir -p /media/pdf
+RUN mkdir -p /static/
 
 COPY requirements.txt ${PWD}
 RUN pip install -r requirements.txt
@@ -20,6 +22,9 @@ ENV USER user1
 RUN useradd -m ${USER} --uid 1000
 RUN gpasswd -a ${USER} sudo
 RUN echo "${USER}:pass" | chpasswd
+
+RUN chown -R user:user /media/
+RUN chmod -R 755 /media/pdf
 
 USER ${USER}
 
