--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,9 @@ djangorestframework-simplejwt
 django-cors-headers
 requests_oauthlib
 django-filter
+django-cleanup
+python-magic
+freezegun
 
 requests
 beautifulsoup4
