--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,8 @@
 Django>=3.1.0, <3.2.0
 djangorestframework >= 3.12.0, < 3.13.0
+graphene-django==2.13.0
+django-graphql-jwt==0.3.1
+PyJWT==1.7.1
 psycopg2-binary
 django-environ
 django-debug-toolbar
