--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -13,6 +14,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/lodash": "^4.14.165",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
@@ -29,6 +31,8 @@
     "formik": "^2.2.2",
     "formik-material-ui": "^3.0.0",
     "formik-material-ui-lab": "^0.0.7",
+    "graphql": "^15.5.0",
+    "jwt-decode": "^3.1.2",
     "loadash": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
