--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.21",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
@@ -26,6 +27,8 @@
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
     "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-deferred": "^1.0.2",
     "date-fns": "^2.16.1",
     "dotenv-cli": "^4.0.0",
     "formik": "^2.2.2",
@@ -35,6 +38,7 @@
     "jwt-decode": "^3.1.2",
     "loadash": "^1.0.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.0",
