--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,13 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.21",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/apollo-upload-client": "^14.1.0",
     "@types/jest": "^24.0.0",
     "@types/jwt-decode": "^3.1.0",
     "@types/lodash": "^4.14.165",
@@ -21,11 +22,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-easy-crop": "^2.0.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-swipeable-views": "^0.13.0",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
+    "apollo-upload-client": "^14.1.3",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "chartjs-plugin-deferred": "^1.0.2",
@@ -40,6 +43,7 @@
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-easy-crop": "^3.3.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
