--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,7 +59,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --verbose",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "bash deploy-s3.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
