--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,6 @@ beautifulsoup4==4.9.3
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
-coverage==5.5
-cryptography==3.4.6
 defusedxml==0.7.0
 dj-database-url==0.5.0
 dj-rest-auth==2.1.3
@@ -16,17 +14,14 @@ django-cleanup==5.1.0
 django-cors-headers==3.7.0
 django-crispy-forms==1.11.1
 django-debug-toolbar==3.2
-django-environ==0.4.5
 django-filter==2.4.0
 django-graphql-jwt==0.3.1
 django-imagekit==4.0.2
 django-jazzmin==2.4.4
 djangorestframework==3.12.2
-djangorestframework-simplejwt==4.6.0
+djangorestframework-simplejwt==4.3.0
 drf-nested-multipart-parser==0.0.2
 drf-writable-nested==0.6.2
-environ==1.0
-flake8==3.8.4
 FormEncode==2.0.0
 freezegun==1.1.0
 graphene==2.1.8
@@ -60,5 +55,6 @@ soupsieve==2.2
 sqlparse==0.4.1
 ulid-py==1.1.0
 Unidecode==1.2.0
-urllib3==1.26.3
-whitenoise==5.2.0
+urllib3
+boto3
+django-storages==1.9.1
