--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
+    "apollo-link-token-refresh": "^0.3.2",
     "apollo-upload-client": "^14.1.3",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
