--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/react-easy-crop": "^2.0.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-scroll": "^1.8.2",
     "@types/react-swipeable-views": "^0.13.0",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
@@ -49,6 +50,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-scroll": "^1.8.2",
     "react-swipeable-views": "^0.13.9",
     "redux-localstorage-simple": "^2.3.1",
     "rifm": "^0.12.0",
