--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,13 +7,13 @@ chardet==4.0.0
 defusedxml==0.7.0
 dj-database-url==0.5.0
 dj-rest-auth==2.1.3
-Django==3.1.7
+Django==3.1.8
 django-allauth==0.44.0
 django-appconf==1.0.4
 django-cleanup==5.1.0
 django-cors-headers==3.7.0
 django-crispy-forms==1.11.1
-django-debug-toolbar==3.2
+django-debug-toolbar==3.2.1
 django-filter==2.4.0
 django-graphql-jwt==0.3.1
 django-imagekit==4.0.2
@@ -58,3 +58,4 @@ Unidecode==1.2.0
 urllib3
 boto3
 django-storages==1.9.1
+django-sendgrid-v5
